GUI/code/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TRUE
    STRING
    POOP
    SEMICOLON
    COLON
    BALL
    CANDY
    FALSE

Grammar

Rule 0     S' -> class
Rule 1     class -> main_add vars_global init_vars func_list MAIN main_retorno block
Rule 2     main_add -> <empty>
Rule 3     main_retorno -> <empty>
Rule 4     vars_global -> varsGlobal vars_global
Rule 5     vars_global -> empty
Rule 6     init_vars -> asign init_vars
Rule 7     init_vars -> empty
Rule 8     func_list -> func func_list
Rule 9     func_list -> empty
Rule 10    func -> FUNC idCheck LPAR funcx RPAR block func_end
Rule 11    func_end -> <empty>
Rule 12    idCheck -> ID
Rule 13    funcx -> vars paramCheck
Rule 14    funcx -> vars paramCheck COMA funcx
Rule 15    funcx -> empty
Rule 16    paramCheck -> <empty>
Rule 17    block -> LCBRACKET blockx RCBRACKET
Rule 18    blockx -> vars
Rule 19    blockx -> vars blockx
Rule 20    blockx -> statement
Rule 21    blockx -> statement blockx
Rule 22    statement -> asign
Rule 23    statement -> condition
Rule 24    statement -> cycle
Rule 25    statement -> print
Rule 26    statement -> list
Rule 27    statement -> call
Rule 28    statement -> move
Rule 29    statement -> eat
Rule 30    statement -> clean
Rule 31    statement -> play
Rule 32    statement -> add
Rule 33    statement -> remove
Rule 34    statement -> find
Rule 35    statement -> sort
Rule 36    statement -> turnleft
Rule 37    statement -> turnright
Rule 38    statement -> return
Rule 39    return -> RETURN LPAR par_call expression RPAR par_call2
Rule 40    return -> RETURN LPAR par_call call RPAR par_call2
Rule 41    varsGlobal -> type ID
Rule 42    vars -> type ID
Rule 43    type -> INT
Rule 44    type -> FLOAT
Rule 45    type -> BOOLEAN
Rule 46    asign -> ID id_val EQUAL equal_val expression
Rule 47    asign -> ID id_val EQUAL equal_val call
Rule 48    id_val -> <empty>
Rule 49    equal_val -> <empty>
Rule 50    expression -> exp
Rule 51    expression -> exp COMPARISON op_val expression
Rule 52    exp -> termino
Rule 53    exp -> termino PLUS op_val exp
Rule 54    exp -> termino MINUS op_val exp
Rule 55    termino -> factor
Rule 56    termino -> factor MULTIPLY op_val termino
Rule 57    termino -> factor DIVIDE op_val termino
Rule 58    termino_val -> <empty>
Rule 59    op_val -> <empty>
Rule 60    factor -> LPAR expression RPAR
Rule 61    factor -> MINUS varcte
Rule 62    factor -> varcte termino_val
Rule 63    varcte -> ID
Rule 64    varcte -> NUMINT
Rule 65    varcte -> NUMFLOAT
Rule 66    varcte -> BOOLEANTYPE
Rule 67    print -> PRINT LPAR par_call printx RPAR par_call2
Rule 68    printx -> expression
Rule 69    printx -> ID id_val
Rule 70    printx -> call
Rule 71    printx -> expression PLUS op_val printx
Rule 72    printx -> ID id_val PLUS op_val printx
Rule 73    printx -> call PLUS op_val printx
Rule 74    cycle -> WHILE cycle_1 LPAR expression RPAR cycle_2 block cycle_3
Rule 75    cycle_1 -> <empty>
Rule 76    cycle_2 -> <empty>
Rule 77    cycle_3 -> <empty>
Rule 78    condition -> IF LPAR expression RPAR cond_1 block else cond_2
Rule 79    else -> ELSE cond_else block
Rule 80    else -> empty
Rule 81    cond_1 -> <empty>
Rule 82    cond_2 -> <empty>
Rule 83    cond_else -> <empty>
Rule 84    list -> LIST idCheck_List EQUAL LBRACKET listx RBRACKET
Rule 85    listx -> ID id_param
Rule 86    listx -> ID id_param COMA listx
Rule 87    listx -> NUMINT id_param
Rule 88    listx -> NUMINT id_param COMA listx
Rule 89    listx -> NUMFLOAT id_param
Rule 90    listx -> NUMFLOAT id_param COMA listx
Rule 91    idCheck_List -> ID
Rule 92    id_param -> <empty>
Rule 93    id_param2 -> <empty>
Rule 94    listx_add -> ID id_param2
Rule 95    listx_add -> NUMINT id_param2
Rule 96    listx_add -> NUMFLOAT id_param2
Rule 97    add -> ID idCheck_Add POINT ADD LPAR listx_add RPAR
Rule 98    idCheck_Add -> <empty>
Rule 99    remove -> ID idCheck_Add POINT REMOVE LPAR RPAR
Rule 100   find -> ID idCheck_Add POINT FIND LPAR NUMINT RPAR
Rule 101   sort -> ID idCheck_Add POINT SORT LPAR RPAR
Rule 102   call -> ID id_call LPAR par_call RPAR par_call2
Rule 103   call -> ID id_call LPAR par_call params RPAR par_call2
Rule 104   id_call -> <empty>
Rule 105   par_call -> <empty>
Rule 106   par_call2 -> <empty>
Rule 107   params -> expression COMA params
Rule 108   params -> ID COMA params
Rule 109   params -> expression
Rule 110   params -> ID
Rule 111   move -> MOVE LPAR ID RPAR
Rule 112   eat -> EAT LPAR ID RPAR
Rule 113   clean -> CLEAN LPAR ID RPAR
Rule 114   play -> PLAY LPAR ID RPAR
Rule 115   turnleft -> TURNLEFT LPAR RPAR
Rule 116   turnright -> TURNRIGHT LPAR RPAR
Rule 117   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 97
BALL                 : 
BOOLEAN              : 45
BOOLEANTYPE          : 66
CANDY                : 
CLEAN                : 113
COLON                : 
COMA                 : 14 86 88 90 107 108
COMPARISON           : 51
DIVIDE               : 57
EAT                  : 112
ELSE                 : 79
EQUAL                : 46 47 84
FALSE                : 
FIND                 : 100
FLOAT                : 44
FUNC                 : 10
ID                   : 12 41 42 46 47 63 69 72 85 86 91 94 97 99 100 101 102 103 108 110 111 112 113 114
IF                   : 78
INT                  : 43
LBRACKET             : 84
LCBRACKET            : 17
LIST                 : 84
LPAR                 : 10 39 40 60 67 74 78 97 99 100 101 102 103 111 112 113 114 115 116
MAIN                 : 1
MINUS                : 54 61
MOVE                 : 111
MULTIPLY             : 56
NUMFLOAT             : 65 89 90 96
NUMINT               : 64 87 88 95 100
PLAY                 : 114
PLUS                 : 53 71 72 73
POINT                : 97 99 100 101
POOP                 : 
PRINT                : 67
RBRACKET             : 84
RCBRACKET            : 17
REMOVE               : 99
RETURN               : 39 40
RPAR                 : 10 39 40 60 67 74 78 97 99 100 101 102 103 111 112 113 114 115 116
SEMICOLON            : 
SORT                 : 101
STRING               : 
TRUE                 : 
TURNLEFT             : 115
TURNRIGHT            : 116
WHILE                : 74
error                : 

Nonterminals, with rules where they appear

add                  : 32
asign                : 6 22
block                : 1 10 74 78 79
blockx               : 17 19 21
call                 : 27 40 47 70 73
class                : 0
clean                : 30
cond_1               : 78
cond_2               : 78
cond_else            : 79
condition            : 23
cycle                : 24
cycle_1              : 74
cycle_2              : 74
cycle_3              : 74
eat                  : 29
else                 : 78
empty                : 5 7 9 15 80
equal_val            : 46 47
exp                  : 50 51 53 54
expression           : 39 46 51 60 68 71 74 78 107 109
factor               : 55 56 57
find                 : 34
func                 : 8
func_end             : 10
func_list            : 1 8
funcx                : 10 14
idCheck              : 10
idCheck_Add          : 97 99 100 101
idCheck_List         : 84
id_call              : 102 103
id_param             : 85 86 87 88 89 90
id_param2            : 94 95 96
id_val               : 46 47 69 72
init_vars            : 1 6
list                 : 26
listx                : 84 86 88 90
listx_add            : 97
main_add             : 1
main_retorno         : 1
move                 : 28
op_val               : 51 53 54 56 57 71 72 73
par_call             : 39 40 67 102 103
par_call2            : 39 40 67 102 103
paramCheck           : 13 14
params               : 103 107 108
play                 : 31
print                : 25
printx               : 67 71 72 73
remove               : 33
return               : 38
sort                 : 35
statement            : 20 21
termino              : 52 53 54 56 57
termino_val          : 62
turnleft             : 36
turnright            : 37
type                 : 41 42
varcte               : 61 62
vars                 : 13 14 18 19
varsGlobal           : 4
vars_global          : 1 4

Parsing method: LALR

state 0

    (0) S' -> . class
    (1) class -> . main_add vars_global init_vars func_list MAIN main_retorno block
    (2) main_add -> .

    INT             reduce using rule 2 (main_add -> .)
    FLOAT           reduce using rule 2 (main_add -> .)
    BOOLEAN         reduce using rule 2 (main_add -> .)
    ID              reduce using rule 2 (main_add -> .)
    FUNC            reduce using rule 2 (main_add -> .)
    MAIN            reduce using rule 2 (main_add -> .)

    class                          shift and go to state 1
    main_add                       shift and go to state 2

state 1

    (0) S' -> class .



state 2

    (1) class -> main_add . vars_global init_vars func_list MAIN main_retorno block
    (4) vars_global -> . varsGlobal vars_global
    (5) vars_global -> . empty
    (41) varsGlobal -> . type ID
    (117) empty -> .
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . BOOLEAN

    ID              reduce using rule 117 (empty -> .)
    FUNC            reduce using rule 117 (empty -> .)
    MAIN            reduce using rule 117 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOLEAN         shift and go to state 6

    varsGlobal                     shift and go to state 3
    empty                          shift and go to state 7
    vars_global                    shift and go to state 8
    type                           shift and go to state 9

state 3

    (4) vars_global -> varsGlobal . vars_global
    (4) vars_global -> . varsGlobal vars_global
    (5) vars_global -> . empty
    (41) varsGlobal -> . type ID
    (117) empty -> .
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . BOOLEAN

    ID              reduce using rule 117 (empty -> .)
    FUNC            reduce using rule 117 (empty -> .)
    MAIN            reduce using rule 117 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOLEAN         shift and go to state 6

    varsGlobal                     shift and go to state 3
    vars_global                    shift and go to state 10
    type                           shift and go to state 9
    empty                          shift and go to state 7

state 4

    (43) type -> INT .

    ID              reduce using rule 43 (type -> INT .)


state 5

    (44) type -> FLOAT .

    ID              reduce using rule 44 (type -> FLOAT .)


state 6

    (45) type -> BOOLEAN .

    ID              reduce using rule 45 (type -> BOOLEAN .)


state 7

    (5) vars_global -> empty .

    ID              reduce using rule 5 (vars_global -> empty .)
    FUNC            reduce using rule 5 (vars_global -> empty .)
    MAIN            reduce using rule 5 (vars_global -> empty .)


state 8

    (1) class -> main_add vars_global . init_vars func_list MAIN main_retorno block
    (6) init_vars -> . asign init_vars
    (7) init_vars -> . empty
    (46) asign -> . ID id_val EQUAL equal_val expression
    (47) asign -> . ID id_val EQUAL equal_val call
    (117) empty -> .

    ID              shift and go to state 14
    FUNC            reduce using rule 117 (empty -> .)
    MAIN            reduce using rule 117 (empty -> .)

    init_vars                      shift and go to state 11
    asign                          shift and go to state 12
    empty                          shift and go to state 13

state 9

    (41) varsGlobal -> type . ID

    ID              shift and go to state 15


state 10

    (4) vars_global -> varsGlobal vars_global .

    ID              reduce using rule 4 (vars_global -> varsGlobal vars_global .)
    FUNC            reduce using rule 4 (vars_global -> varsGlobal vars_global .)
    MAIN            reduce using rule 4 (vars_global -> varsGlobal vars_global .)


state 11

    (1) class -> main_add vars_global init_vars . func_list MAIN main_retorno block
    (8) func_list -> . func func_list
    (9) func_list -> . empty
    (10) func -> . FUNC idCheck LPAR funcx RPAR block func_end
    (117) empty -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 117 (empty -> .)

    empty                          shift and go to state 17
    func                           shift and go to state 18
    func_list                      shift and go to state 19

state 12

    (6) init_vars -> asign . init_vars
    (6) init_vars -> . asign init_vars
    (7) init_vars -> . empty
    (46) asign -> . ID id_val EQUAL equal_val expression
    (47) asign -> . ID id_val EQUAL equal_val call
    (117) empty -> .

    ID              shift and go to state 14
    FUNC            reduce using rule 117 (empty -> .)
    MAIN            reduce using rule 117 (empty -> .)

    init_vars                      shift and go to state 20
    asign                          shift and go to state 12
    empty                          shift and go to state 13

state 13

    (7) init_vars -> empty .

    FUNC            reduce using rule 7 (init_vars -> empty .)
    MAIN            reduce using rule 7 (init_vars -> empty .)


state 14

    (46) asign -> ID . id_val EQUAL equal_val expression
    (47) asign -> ID . id_val EQUAL equal_val call
    (48) id_val -> .

    EQUAL           reduce using rule 48 (id_val -> .)

    id_val                         shift and go to state 21

state 15

    (41) varsGlobal -> type ID .

    INT             reduce using rule 41 (varsGlobal -> type ID .)
    FLOAT           reduce using rule 41 (varsGlobal -> type ID .)
    BOOLEAN         reduce using rule 41 (varsGlobal -> type ID .)
    ID              reduce using rule 41 (varsGlobal -> type ID .)
    FUNC            reduce using rule 41 (varsGlobal -> type ID .)
    MAIN            reduce using rule 41 (varsGlobal -> type ID .)


state 16

    (10) func -> FUNC . idCheck LPAR funcx RPAR block func_end
    (12) idCheck -> . ID

    ID              shift and go to state 23

    idCheck                        shift and go to state 22

state 17

    (9) func_list -> empty .

    MAIN            reduce using rule 9 (func_list -> empty .)


state 18

    (8) func_list -> func . func_list
    (8) func_list -> . func func_list
    (9) func_list -> . empty
    (10) func -> . FUNC idCheck LPAR funcx RPAR block func_end
    (117) empty -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 117 (empty -> .)

    empty                          shift and go to state 17
    func                           shift and go to state 18
    func_list                      shift and go to state 24

state 19

    (1) class -> main_add vars_global init_vars func_list . MAIN main_retorno block

    MAIN            shift and go to state 25


state 20

    (6) init_vars -> asign init_vars .

    FUNC            reduce using rule 6 (init_vars -> asign init_vars .)
    MAIN            reduce using rule 6 (init_vars -> asign init_vars .)


state 21

    (46) asign -> ID id_val . EQUAL equal_val expression
    (47) asign -> ID id_val . EQUAL equal_val call

    EQUAL           shift and go to state 26


state 22

    (10) func -> FUNC idCheck . LPAR funcx RPAR block func_end

    LPAR            shift and go to state 27


state 23

    (12) idCheck -> ID .

    LPAR            reduce using rule 12 (idCheck -> ID .)


state 24

    (8) func_list -> func func_list .

    MAIN            reduce using rule 8 (func_list -> func func_list .)


state 25

    (1) class -> main_add vars_global init_vars func_list MAIN . main_retorno block
    (3) main_retorno -> .

    LCBRACKET       reduce using rule 3 (main_retorno -> .)

    main_retorno                   shift and go to state 28

state 26

    (46) asign -> ID id_val EQUAL . equal_val expression
    (47) asign -> ID id_val EQUAL . equal_val call
    (49) equal_val -> .

    ID              reduce using rule 49 (equal_val -> .)
    LPAR            reduce using rule 49 (equal_val -> .)
    MINUS           reduce using rule 49 (equal_val -> .)
    NUMINT          reduce using rule 49 (equal_val -> .)
    NUMFLOAT        reduce using rule 49 (equal_val -> .)
    BOOLEANTYPE     reduce using rule 49 (equal_val -> .)

    equal_val                      shift and go to state 29

state 27

    (10) func -> FUNC idCheck LPAR . funcx RPAR block func_end
    (13) funcx -> . vars paramCheck
    (14) funcx -> . vars paramCheck COMA funcx
    (15) funcx -> . empty
    (42) vars -> . type ID
    (117) empty -> .
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . BOOLEAN

    RPAR            reduce using rule 117 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOLEAN         shift and go to state 6

    funcx                          shift and go to state 31
    vars                           shift and go to state 30
    empty                          shift and go to state 32
    type                           shift and go to state 33

state 28

    (1) class -> main_add vars_global init_vars func_list MAIN main_retorno . block
    (17) block -> . LCBRACKET blockx RCBRACKET

    LCBRACKET       shift and go to state 34

    block                          shift and go to state 35

state 29

    (46) asign -> ID id_val EQUAL equal_val . expression
    (47) asign -> ID id_val EQUAL equal_val . call
    (50) expression -> . exp
    (51) expression -> . exp COMPARISON op_val expression
    (102) call -> . ID id_call LPAR par_call RPAR par_call2
    (103) call -> . ID id_call LPAR par_call params RPAR par_call2
    (52) exp -> . termino
    (53) exp -> . termino PLUS op_val exp
    (54) exp -> . termino MINUS op_val exp
    (55) termino -> . factor
    (56) termino -> . factor MULTIPLY op_val termino
    (57) termino -> . factor DIVIDE op_val termino
    (60) factor -> . LPAR expression RPAR
    (61) factor -> . MINUS varcte
    (62) factor -> . varcte termino_val
    (63) varcte -> . ID
    (64) varcte -> . NUMINT
    (65) varcte -> . NUMFLOAT
    (66) varcte -> . BOOLEANTYPE

    ID              shift and go to state 43
    LPAR            shift and go to state 36
    MINUS           shift and go to state 39
    NUMINT          shift and go to state 44
    NUMFLOAT        shift and go to state 38
    BOOLEANTYPE     shift and go to state 46

    factor                         shift and go to state 42
    varcte                         shift and go to state 40
    call                           shift and go to state 41
    termino                        shift and go to state 37
    exp                            shift and go to state 45
    expression                     shift and go to state 47

state 30

    (13) funcx -> vars . paramCheck
    (14) funcx -> vars . paramCheck COMA funcx
    (16) paramCheck -> .

    COMA            reduce using rule 16 (paramCheck -> .)
    RPAR            reduce using rule 16 (paramCheck -> .)

    paramCheck                     shift and go to state 48

state 31

    (10) func -> FUNC idCheck LPAR funcx . RPAR block func_end

    RPAR            shift and go to state 49


state 32

    (15) funcx -> empty .

    RPAR            reduce using rule 15 (funcx -> empty .)


state 33

    (42) vars -> type . ID

    ID              shift and go to state 50


state 34

    (17) block -> LCBRACKET . blockx RCBRACKET
    (18) blockx -> . vars
    (19) blockx -> . vars blockx
    (20) blockx -> . statement
    (21) blockx -> . statement blockx
    (42) vars -> . type ID
    (22) statement -> . asign
    (23) statement -> . condition
    (24) statement -> . cycle
    (25) statement -> . print
    (26) statement -> . list
    (27) statement -> . call
    (28) statement -> . move
    (29) statement -> . eat
    (30) statement -> . clean
    (31) statement -> . play
    (32) statement -> . add
    (33) statement -> . remove
    (34) statement -> . find
    (35) statement -> . sort
    (36) statement -> . turnleft
    (37) statement -> . turnright
    (38) statement -> . return
    (43) type -> . INT
    (44) type -> . FLOAT
    (45) type -> . BOOLEAN
    (46) asign -> . ID id_val EQUAL equal_val expression
    (47) asign -> . ID id_val EQUAL equal_val call
    (78) condition -> . IF LPAR expression RPAR cond_1 block else cond_2
    (74) cycle -> . WHILE cycle_1 LPAR expression RPAR cycle_2 block cycle_3
    (67) print -> . PRINT LPAR par_call printx RPAR par_call2
    (84) list -> . LIST idCheck_List EQUAL LBRACKET listx RBRACKET
    (102) call -> . ID id_call LPAR par_call RPAR par_call2
    (103) call -> . ID id_call LPAR par_call params RPAR par_call2
    (111) move -> . MOVE LPAR ID RPAR
    (112) eat -> . EAT LPAR ID RPAR
    (113) clean -> . CLEAN LPAR ID RPAR
    (114) play -> . PLAY LPAR ID RPAR
    (97) add -> . ID idCheck_Add POINT ADD LPAR listx_add RPAR
    (99) remove -> . ID idCheck_Add POINT REMOVE LPAR RPAR
    (100) find -> . ID idCheck_Add POINT FIND LPAR NUMINT RPAR
    (101) sort -> . ID idCheck_Add POINT SORT LPAR RPAR
    (115) turnleft -> . TURNLEFT LPAR RPAR
    (116) turnright -> . TURNRIGHT LPAR RPAR
    (39) return -> . RETURN LPAR par_call expression RPAR par_call2
    (40) return -> . RETURN LPAR par_call call RPAR par_call2

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    BOOLEAN         shift and go to state 6
    ID              shift and go to state 58
    IF              shift and go to state 64
    WHILE           shift and go to state 54
    PRINT           shift and go to state 55
    LIST            shift and go to state 57
    MOVE            shift and go to state 68
    EAT             shift and go to state 65
    CLEAN           shift and go to state 73
    PLAY            shift and go to state 77
    TURNLEFT        shift and go to state 78
    TURNRIGHT       shift and go to state 72
    RETURN          shift and go to state 51

    vars                           shift and go to state 52
    move                           shift and go to state 53
    find                           shift and go to state 56
    turnright                      shift and go to state 59
    add                            shift and go to state 60
    call                           shift and go to state 61
    statement                      shift and go to state 62
    print                          shift and go to state 63
    type                           shift and go to state 33
    sort                           shift and go to state 66
    play                           shift and go to state 67
    return                         shift and go to state 69
    turnleft                       shift and go to state 70
    blockx                         shift and go to state 71
    eat                            shift and go to state 74
    condition                      shift and go to state 75
    cycle                          shift and go to state 76
    list                           shift and go to state 79
    remove                         shift and go to state 80
    asign                          shift and go to state 81
    clean                          shift and go to state 82

state 35

    (1) class -> main_add vars_global init_vars func_list MAIN main_retorno block .

    $end            reduce using rule 1 (class -> main_add vars_global init_vars func_list MAIN main_retorno block .)


state 36

    (60) factor -> LPAR . expression RPAR
    (50) expression -> . exp
    (51) expression -> . exp COMPARISON op_val expression
    (52) exp -> . termino
    (53) exp -> . termino PLUS op_val exp
    (54) exp -> . termino MINUS op_val exp
    (55) termino -> . factor
    (56) termino -> . factor MULTIPLY op_val termino
    (57) termino -> . factor DIVIDE op_val termino
    (60) factor -> . LPAR expression RPAR
    (61) factor -> . MINUS varcte
    (62) factor -> . varcte termino_val
    (63) varcte -> . ID
    (64) varcte -> . NUMINT
    (65) varcte -> . NUMFLOAT
    (66) varcte -> . BOOLEANTYPE

    LPAR            shift and go to state 36
    MINUS           shift and go to state 39
    ID              shift and go to state 83
    NUMINT          shift and go to state 44
    NUMFLOAT        shift and go to state 38
    BOOLEANTYPE     shift and go to state 46

    varcte                         shift and go to state 40
    termino                        shift and go to state 37
    exp                            shift and go to state 45
    factor                         shift and go to state 42
    expression                     shift and go to state 84

state 37

    (52) exp -> termino .
    (53) exp -> termino . PLUS op_val exp
    (54) exp -> termino . MINUS op_val exp

  ! shift/reduce conflict for PLUS resolved as shift
    COMPARISON      reduce using rule 52 (exp -> termino .)
    ID              reduce using rule 52 (exp -> termino .)
    FUNC            reduce using rule 52 (exp -> termino .)
    MAIN            reduce using rule 52 (exp -> termino .)
    INT             reduce using rule 52 (exp -> termino .)
    FLOAT           reduce using rule 52 (exp -> termino .)
    BOOLEAN         reduce using rule 52 (exp -> termino .)
    IF              reduce using rule 52 (exp -> termino .)
    WHILE           reduce using rule 52 (exp -> termino .)
    PRINT           reduce using rule 52 (exp -> termino .)
    LIST            reduce using rule 52 (exp -> termino .)
    MOVE            reduce using rule 52 (exp -> termino .)
    EAT             reduce using rule 52 (exp -> termino .)
    CLEAN           reduce using rule 52 (exp -> termino .)
    PLAY            reduce using rule 52 (exp -> termino .)
    TURNLEFT        reduce using rule 52 (exp -> termino .)
    TURNRIGHT       reduce using rule 52 (exp -> termino .)
    RETURN          reduce using rule 52 (exp -> termino .)
    RCBRACKET       reduce using rule 52 (exp -> termino .)
    RPAR            reduce using rule 52 (exp -> termino .)
    COMA            reduce using rule 52 (exp -> termino .)
    PLUS            shift and go to state 85
    MINUS           shift and go to state 86

  ! PLUS            [ reduce using rule 52 (exp -> termino .) ]


state 38

    (65) varcte -> NUMFLOAT .

    MULTIPLY        reduce using rule 65 (varcte -> NUMFLOAT .)
    DIVIDE          reduce using rule 65 (varcte -> NUMFLOAT .)
    PLUS            reduce using rule 65 (varcte -> NUMFLOAT .)
    MINUS           reduce using rule 65 (varcte -> NUMFLOAT .)
    COMPARISON      reduce using rule 65 (varcte -> NUMFLOAT .)
    COMA            reduce using rule 65 (varcte -> NUMFLOAT .)
    RPAR            reduce using rule 65 (varcte -> NUMFLOAT .)
    ID              reduce using rule 65 (varcte -> NUMFLOAT .)
    FUNC            reduce using rule 65 (varcte -> NUMFLOAT .)
    MAIN            reduce using rule 65 (varcte -> NUMFLOAT .)
    INT             reduce using rule 65 (varcte -> NUMFLOAT .)
    FLOAT           reduce using rule 65 (varcte -> NUMFLOAT .)
    BOOLEAN         reduce using rule 65 (varcte -> NUMFLOAT .)
    IF              reduce using rule 65 (varcte -> NUMFLOAT .)
    WHILE           reduce using rule 65 (varcte -> NUMFLOAT .)
    PRINT           reduce using rule 65 (varcte -> NUMFLOAT .)
    LIST            reduce using rule 65 (varcte -> NUMFLOAT .)
    MOVE            reduce using rule 65 (varcte -> NUMFLOAT .)
    EAT             reduce using rule 65 (varcte -> NUMFLOAT .)
    CLEAN           reduce using rule 65 (varcte -> NUMFLOAT .)
    PLAY            reduce using rule 65 (varcte -> NUMFLOAT .)
    TURNLEFT        reduce using rule 65 (varcte -> NUMFLOAT .)
    TURNRIGHT       reduce using rule 65 (varcte -> NUMFLOAT .)
    RETURN          reduce using rule 65 (varcte -> NUMFLOAT .)
    RCBRACKET       reduce using rule 65 (varcte -> NUMFLOAT .)


state 39

    (61) factor -> MINUS . varcte
    (63) varcte -> . ID
    (64) varcte -> . NUMINT
    (65) varcte -> . NUMFLOAT
    (66) varcte -> . BOOLEANTYPE

    ID              shift and go to state 83
    NUMINT          shift and go to state 44
    NUMFLOAT        shift and go to state 38
    BOOLEANTYPE     shift and go to state 46

    varcte                         shift and go to state 87

state 40

    (62) factor -> varcte . termino_val
    (58) termino_val -> .

    MULTIPLY        reduce using rule 58 (termino_val -> .)
    DIVIDE          reduce using rule 58 (termino_val -> .)
    PLUS            reduce using rule 58 (termino_val -> .)
    MINUS           reduce using rule 58 (termino_val -> .)
    COMPARISON      reduce using rule 58 (termino_val -> .)
    ID              reduce using rule 58 (termino_val -> .)
    FUNC            reduce using rule 58 (termino_val -> .)
    MAIN            reduce using rule 58 (termino_val -> .)
    INT             reduce using rule 58 (termino_val -> .)
    FLOAT           reduce using rule 58 (termino_val -> .)
    BOOLEAN         reduce using rule 58 (termino_val -> .)
    IF              reduce using rule 58 (termino_val -> .)
    WHILE           reduce using rule 58 (termino_val -> .)
    PRINT           reduce using rule 58 (termino_val -> .)
    LIST            reduce using rule 58 (termino_val -> .)
    MOVE            reduce using rule 58 (termino_val -> .)
    EAT             reduce using rule 58 (termino_val -> .)
    CLEAN           reduce using rule 58 (termino_val -> .)
    PLAY            reduce using rule 58 (termino_val -> .)
    TURNLEFT        reduce using rule 58 (termino_val -> .)
    TURNRIGHT       reduce using rule 58 (termino_val -> .)
    RETURN          reduce using rule 58 (termino_val -> .)
    RCBRACKET       reduce using rule 58 (termino_val -> .)
    RPAR            reduce using rule 58 (termino_val -> .)
    COMA            reduce using rule 58 (termino_val -> .)

    termino_val                    shift and go to state 88

state 41

    (47) asign -> ID id_val EQUAL equal_val call .

    INT             reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    FLOAT           reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    BOOLEAN         reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    ID              reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    IF              reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    WHILE           reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    PRINT           reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    LIST            reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    MOVE            reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    EAT             reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    CLEAN           reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    PLAY            reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    TURNLEFT        reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    TURNRIGHT       reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    RETURN          reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    RCBRACKET       reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    FUNC            reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)
    MAIN            reduce using rule 47 (asign -> ID id_val EQUAL equal_val call .)


state 42

    (55) termino -> factor .
    (56) termino -> factor . MULTIPLY op_val termino
    (57) termino -> factor . DIVIDE op_val termino

    PLUS            reduce using rule 55 (termino -> factor .)
    MINUS           reduce using rule 55 (termino -> factor .)
    COMPARISON      reduce using rule 55 (termino -> factor .)
    COMA            reduce using rule 55 (termino -> factor .)
    RPAR            reduce using rule 55 (termino -> factor .)
    ID              reduce using rule 55 (termino -> factor .)
    FUNC            reduce using rule 55 (termino -> factor .)
    MAIN            reduce using rule 55 (termino -> factor .)
    INT             reduce using rule 55 (termino -> factor .)
    FLOAT           reduce using rule 55 (termino -> factor .)
    BOOLEAN         reduce using rule 55 (termino -> factor .)
    IF              reduce using rule 55 (termino -> factor .)
    WHILE           reduce using rule 55 (termino -> factor .)
    PRINT           reduce using rule 55 (termino -> factor .)
    LIST            reduce using rule 55 (termino -> factor .)
    MOVE            reduce using rule 55 (termino -> factor .)
    EAT             reduce using rule 55 (termino -> factor .)
    CLEAN           reduce using rule 55 (termino -> factor .)
    PLAY            reduce using rule 55 (termino -> factor .)
    TURNLEFT        reduce using rule 55 (termino -> factor .)
    TURNRIGHT       reduce using rule 55 (termino -> factor .)
    RETURN          reduce using rule 55 (termino -> factor .)
    RCBRACKET       reduce using rule 55 (termino -> factor .)
    MULTIPLY        shift and go to state 89
    DIVIDE          shift and go to state 90


state 43

    (102) call -> ID . id_call LPAR par_call RPAR par_call2
    (103) call -> ID . id_call LPAR par_call params RPAR par_call2
    (63) varcte -> ID .
    (104) id_call -> .
